# ProCodes

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  AUDIT_2026.md  FLASHDEPTH_ANALYSIS.md  IMPROVEMENTS.md  KT_Walkthrough.md  PHASE3_DESIGN.md  PHASE3_DIAGNOSIS.md  TEMPORAL_DESIGN.md
instancedepth/: meta.json  predict.py
paper/: environ.sty  main.tex  references.bib
results/: ANALYSIS.md  hdi_dav2_berhu_eval.json  hdi_dav2_eval.json  hdi_dav2_eval_streaming.json  hdi_enhanced_eval.json  hdi_enhanced_eval_streaming.json  hdi_enhanced_eval_streaming_subset100.json  hdi_temporal_eval_streaming.json  phase2_dav2_eval.json  phase2_run_eval.json  phase3_current_eval.json  phase3_dav2_eval.json  phase3_video_dav2_eval.json  vda_metric_baseline_test.json  video_temporal_dav2_eval_streaming.json
scripts/: check_temporal_module.py  eval_phase3_per_sequence.py  eval_vda_baseline.py  infer_sequence.py  infer_video.py  inspect_dinov2_checkpoint.py  make_grid_video.py  make_sequence_videos.py  paired_significance.py  precompute_bins.py  probe_depth_range.py  run_all_pipelines.sh  run_dav2_pipeline.sh  run_full_pipeline.sh  verify_mask2former_api.py  visualize_hdi.py  visualize_phase2.py  visualize_phase3.py
tests/: test_coco_ap.py  test_dav2.py  test_depth_smoother.py  test_grid_video.py  test_hdi_losses.py  test_hdi_shapes.py  test_output_contract.py  test_phase2_ckpt_convert.py  test_phase2_matcher_criterion.py  test_phase2_metrics.py  test_phase2_model.py  test_phase3.py  test_probe_depth_range.py  test_query_tracker.py  test_temporal.py  test_videodepth.py  (+2 more)
(+96 files in other folders)
